# roution

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
dart/demo/: main.dart
demo/: index.js
go/: README.md  compile.go  compile_test.go  go.mod  match_test.go  matcher.go  normalize.go  normalize_test.go  pattern.go  pattern_test.go  regex.go  roution_test.go  strategy.go  strategy_test.go  trie.go
go/demo/: main.go
go/examples/basic/: main.go
go/internal/: regex.go  trie.go
js/: README.md
js/demo/: index.js
js/examples/: index.js
js/examples/basic/: index.js
js/src/: normalize.js  pattern.js  strategy.js
js/src/strategies/: trie.js
js/tests/: normalize.test.js  pattern.test.js  roution.test.js
php/demo/: index.php
python/: .gitignore  README.md  pyproject.toml
python/demo/: main.py
python/examples/basic/: main.py
python/roution/: __init__.py  compile.py  matcher.py  normalize.py  pattern.py  result.py  strategy.py
python/roution/strategies/: regex.py  trie.py
python/tests/: test_compile.py  test_match.py  test_normalize.py  test_pattern.py  test_roution.py  test_strategy.py
rust/: .gitignore
rust/demo/: main.rs
src/: compile.js  normalize.js  roution.js  strategy.js
src/strategies/: regex.js  trie.js
tests/: compile.test.js  match.test.js  normalize.test.js  roution.test.js  strategy.test.js
