[project]
name = "roution"
version = "0.1.0"
description = "A lightweight, runtime-independent route resolution engine for Python."
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["roution", "roution.strategies"]
